syntax = "proto3";
package student;
// go package
option go_package = "github.com/Luiggy102/go-grpc-protobuf;studentpb";

// Student strucs
message Student {
  string id = 1;
  string name = 2;
  int32 age = 3;
}
message GetStudentRequest { string id = 1; }
message SetStudentResponse { string id = 1; }

// Student service
service StudentService {
  rpc GetStudent(GetStudentRequest) returns (Student);
  rpc SetStudent(Student) returns (SetStudentResponse);
}
